--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"outDir": "out/client",
 		"lib": [ "es2016", "dom" ],
 		"sourceMap": true,
-		"esModuleInterop": true,
+		"esModuleInterop": true
 	},
 	"include": [
 		"client"
@@ -19,6 +19,7 @@
 	"exclude": [
 		"node_modules",
 		"server",
-		"paket-files"
+		"paket-files",
+		".vscode-test"
 	]
 }
