--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,13 +36,13 @@
             "runtimeExecutable": "${execPath}",
             "args": [
                 "${workspaceFolder}/client/test/sample mod",
+                "${workspaceFolder}/client/test/sample mod/events/irm.txt",
                 "--extensionDevelopmentPath=${workspaceFolder}",
-                "--extensionTestsPath=${workspaceFolder}/out/test"
+                "--extensionTestsPath=${workspaceFolder}/out/client/test/suite"
             ],
             "outFiles": [
-                "${workspaceFolder}/out/test/**/*.js"
-            ],
-            "preLaunchTask": "npm: watch"
+                "${workspaceFolder}/out/client/test/**/*.js"
+            ]
         },
         {
             "preLaunchTask": "Build",
