Use local tools

--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -6,6 +6,7 @@
     <TargetLatestRuntimePatch>True</TargetLatestRuntimePatch>
     <TieredCompilation>true</TieredCompilation>
     <PublishTrimmed>true</PublishTrimmed>
+    <PaketCommand>dotnet paket</PaketCommand>
   </PropertyGroup>
   <PropertyGroup>
     <EnableDefaultItems>false</EnableDefaultItems>
