--- a/package.json
+++ b/package.json
@@ -246,7 +246,7 @@
                         "latest",
                         "manual"
                     ],
-                    "default": "stable",
+                    "default": "latest",
                     "description": "Which version of rules to auto-update to. Manual will use the local path set in rules_folder"
                 },
                 "cwtools.rules_folder": {
