maxfilesize and perf

--- a/package.json
+++ b/package.json
@@ -297,6 +297,13 @@
                     "minimum": 0,
                     "description": "Control scroll wheel zoom sensitivity, <1 reduces sensitivity, >1 increases sensitivity",
                     "default": 1
+                },
+                "cwtools.maxFileSize": {
+                    "scope": "resource",
+                    "type":"integer",
+                    "minimum": 1,
+                    "default": 2,
+                    "description": "Maximum script file size to load in megabytes (warning, large files can "
                 }
             }
         },
