--- a/package.json
+++ b/package.json
@@ -346,10 +346,10 @@
                 ],
                 "configuration": "./language-configuration.json",
                 "filenamePatterns": [
-                    "**/hearts*of*iron*iv/**/*.txt",
-                    "**/hearts*of*iron*iv/**/*.gui",
-                    "**/hearts*of*iron*iv/**/*.gfx",
-                    "**/hearts*of*iron*iv/**/*.asset"
+                    "**/hearts*of*iron*iv*/**/*.txt",
+                    "**/hearts*of*iron*iv*/**/*.gui",
+                    "**/hearts*of*iron*iv*/**/*.gfx",
+                    "**/hearts*of*iron*iv*/**/*.asset"
                 ]
             },
             {
