Add export all types command

--- a/package.json
+++ b/package.json
@@ -146,6 +146,11 @@
                 "category": "cwtools"
             },
             {
+                "command": "exportTypes",
+                "title": "Export: all types",
+                "category": "cwtools"
+            },
+            {
                 "command": "saveGraphImage",
                 "title": "Save graph as image",
                 "category": "cwtools",
