Default to utf8bom in yaml

--- a/package.json
+++ b/package.json
@@ -560,6 +560,7 @@
             },
             "[yaml]": {
                 "files.autoGuessEncoding": true,
+                "files.encoding": "utf8bom",
                 "editor.insertSpaces": true,
                 "editor.autoIndent": "none",
                 "editor.wordWrap": "on"
