--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -6,10 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\LSP\LSP.fsproj" />
-    <ProjectReference Include="..\..\paket-files\git\localfilesystem\cwtools\CWTools\CWTools.fsproj" />
-    <ProjectReference Include="..\LSP\LSP.fsproj" />
-    <ProjectReference Include="..\..\paket-files\git\localfilesystem\cwtools\CWTools\CWTools.fsproj" />
-  </ItemGroup>
+    <ProjectReference Include="..\..\paket-files\git\github.com\cwtools\cwtools\CWTools\CWTools.fsproj" />  </ItemGroup>
   <ItemGroup>
     <Compile Include="ProjectManager.fs" />
     <Compile Include="Serialize.fs" />
