--- a/package.json
+++ b/package.json
@@ -526,7 +526,8 @@
                     "strings": true
                 },
                 "editor.insertSpaces": false,
-                "editor.acceptSuggestionOnEnter": "off"
+                "editor.acceptSuggestionOnEnter": "off",
+                "editor.suggest.insertMode": "replace"
             },
             "[hoi4]": {
                 "files.autoGuessEncoding": true,
@@ -536,7 +537,8 @@
                     "strings": true
                 },
                 "editor.insertSpaces": false,
-                "editor.acceptSuggestionOnEnter": "off"
+                "editor.acceptSuggestionOnEnter": "off",
+                "editor.suggest.insertMode": "replace"
             },
             "[eu4]": {
                 "files.autoGuessEncoding": true,
@@ -546,7 +548,8 @@
                     "strings": true
                 },
                 "editor.insertSpaces": false,
-                "editor.acceptSuggestionOnEnter": "off"
+                "editor.acceptSuggestionOnEnter": "off",
+                "editor.suggest.insertMode": "replace"
             },
             "[ck2]": {
                 "files.autoGuessEncoding": true,
@@ -556,7 +559,8 @@
                     "strings": true
                 },
                 "editor.insertSpaces": false,
-                "editor.acceptSuggestionOnEnter": "off"
+                "editor.acceptSuggestionOnEnter": "off",
+                "editor.suggest.insertMode": "replace"
             },
             "[imperator]": {
                 "files.autoGuessEncoding": true,
@@ -566,7 +570,8 @@
                     "strings": true
                 },
                 "editor.insertSpaces": false,
-                "editor.acceptSuggestionOnEnter": "off"
+                "editor.acceptSuggestionOnEnter": "off",
+                "editor.suggest.insertMode": "replace"
             },
             "[vic2]": {
                 "files.autoGuessEncoding": true,
@@ -576,7 +581,8 @@
                     "strings": true
                 },
                 "editor.insertSpaces": false,
-                "editor.acceptSuggestionOnEnter": "off"
+                "editor.acceptSuggestionOnEnter": "off",
+                "editor.suggest.insertMode": "replace"
             },
             "[ck3]": {
                 "files.autoGuessEncoding": true,
@@ -586,7 +592,8 @@
                     "strings": true
                 },
                 "editor.insertSpaces": false,
-                "editor.acceptSuggestionOnEnter": "off"
+                "editor.acceptSuggestionOnEnter": "off",
+                "editor.suggest.insertMode": "replace"
             },
             "[customparadox]": {
                 "files.autoGuessEncoding": true,
@@ -596,7 +603,8 @@
                     "strings": true
                 },
                 "editor.insertSpaces": false,
-                "editor.acceptSuggestionOnEnter": "off"
+                "editor.acceptSuggestionOnEnter": "off",
+                "editor.suggest.insertMode": "replace"
             },
             "[yaml]": {
                 "files.autoGuessEncoding": true,
