Fix setting explanation

--- a/package.json
+++ b/package.json
@@ -321,7 +321,7 @@
                     "type": "integer",
                     "minimum": 1,
                     "default": 2,
-                    "description": "Maximum script file size to load in megabytes (warning, large files can "
+                    "description": "Maximum script file size to load in megabytes (warning, very large files can cause instability or invalid diagnostics)"
                 },
                 "cwtools.localisation.replaceme": {
                     "scope": "window",
