--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -18,6 +18,7 @@
     <Compile Include="Git.fs" />
     <Compile Include="LanguageServerFeatures.fs" />
     <Compile Include="GameLoader.fs" />
+    <Compile Include="Completion.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
