--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "onLanguage:ck3",
         "onCommand:startcustomgame"
     ],
-    "main": "./out/client/extension/extension",
+    "main": "./out/client/extension/extension.js",
     "files": [
         "./src/Main/bin/Debug/netcoreapp2.0/Main.dll",
         "./out",
