WIP update stuff

--- a/tsconfig.webview.json
+++ b/tsconfig.webview.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"module": "umd",
-		"target": "es6",
-		"outFile": "out/client/webview/graph.js",
+		"module": "ES2020",
+		"target": "es2020",
+		// "outFile": "out/client/webview/graph.js",
 		"lib": ["dom"],
 
 	},
