--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "url": "https://github.com/tboby/cwtools-vscode"
     },
     "engines": {
-        "vscode": "^1.45.0"
+        "vscode": "^1.83.0"
     },
     "categories": [
         "Programming Languages",
@@ -687,15 +687,15 @@
         "@types/node": "^8.10.63",
         "@types/qtip2": "^2.2.30",
         "@types/cytoscape": "3.14.7",
-        "@types/vscode": "^1.45.0",
+        "@types/vscode": "^1.83.0",
         "@types/glob": "^7.1.3",
         "copyfiles": "^2.3.0",
-        "rollup-plugin-commonjs": "^10.0.2",
+        "@rollup/plugin-commonjs": "^25.0.5",
+        "@rollup/plugin-node-resolve": "^15.2.2",
         "rollup-plugin-hypothetical": "^2.1.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-typescript": "^1.0.1",
+        "rollup-plugin-typescript2": "^0.36.0",
         "tslib": "^1.13.0",
-        "typescript": "^3.9.7",
+        "typescript": "^5.2.2",
         "vscode-test": "^1.4.0",
         "glob": "^7.1.6",
         "mocha": "^6.2.3"
