--- a/tsconfig.webview.json
+++ b/tsconfig.webview.json
@@ -3,7 +3,7 @@
 		"module": "ES2020",
 		"target": "es2020",
 		// "outFile": "out/client/webview/graph.js",
-		"lib": ["dom"],
+		"lib": ["es2020", "dom"],
 
 	},
 	"extends": "./tsconfig.json",
