--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "icon": "docs/cwtools_logo.png",
     "repository": {
         "type": "git",
-        "url": "https://github.com/tboby/cwtools-vscode"
+        "url": "https://github.com/cwtools/cwtools-vscode"
     },
     "engines": {
         "vscode": "^1.83.0"
@@ -27,18 +27,6 @@
         "victoria",
         "crusader kings",
         "hearts of iron"
-    ],
-    "activationEvents": [
-        "onLanguage:paradox",
-        "onLanguage:stellaris",
-        "onLanguage:hoi4",
-        "onLanguage:eu4",
-        "onLanguage:ck2",
-        "onLanguage:imperator",
-        "onLanguage:vic2",
-        "onLanguage:vic3",
-        "onLanguage:ck3",
-        "onCommand:startcustomgame"
     ],
     "main": "./out/client/extension/extension.js",
     "files": [
@@ -670,35 +658,35 @@
         "test": "node ./out/client/test/runTest.js"
     },
     "dependencies": {
-        "vscode-languageclient": "^6.1.3",
-        "executable": "4.1.1"
+        "executable": "4.1.1",
+        "vscode-languageclient": "^6.1.3"
     },
     "devDependencies": {
-        "npm": "^6.14.8",
-        "cytoscape": "^3.15.2",
-        "cytoscape-canvas": "3.0.1",
-        "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
-        "cytoscape-popper": "1.0.7",
-        "popper.js": "^1.15.0",
-        "tippy.js": "^4.3.5",
-        "merge-images": "1.2.0",
+        "@rollup/plugin-commonjs": "^25.0.5",
+        "@rollup/plugin-node-resolve": "^15.2.2",
+        "@types/cytoscape": "3.14.7",
+        "@types/glob": "^7.1.3",
         "@types/handlebars": "^4.0.40",
         "@types/mocha": "^5.2.7",
         "@types/node": "^16.18.34",
         "@types/qtip2": "^2.2.30",
-        "@types/cytoscape": "3.14.7",
         "@types/vscode": "^1.83.0",
-        "@types/glob": "^7.1.3",
         "copyfiles": "^2.3.0",
-        "@rollup/plugin-commonjs": "^25.0.5",
-        "@rollup/plugin-node-resolve": "^15.2.2",
+        "cytoscape": "^3.15.2",
+        "cytoscape-canvas": "3.0.1",
+        "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
+        "cytoscape-popper": "1.0.7",
+        "glob": "^7.1.6",
+        "merge-images": "1.2.0",
+        "mocha": "^6.2.3",
+        "npm": "^6.14.8",
+        "popper.js": "^1.15.0",
         "rollup-plugin-hypothetical": "^2.1.0",
         "rollup-plugin-typescript2": "^0.36.0",
+        "tippy.js": "^4.3.5",
         "tslib": "^1.13.0",
         "typescript": "^5.2.2",
-        "vscode-test": "^1.4.0",
-        "glob": "^7.1.6",
-        "mocha": "^6.2.3"
+        "vscode-test": "^1.4.0"
     },
     "extensionPack": [
         "tboby.paradox-syntax"
