--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,5 +41,15 @@
             ],
             "group": "build"
         },
+        {
+            "label": "PaketUpdate",
+            "command": "dotnet",
+            "args": ["paket", "update", "-g", "git"]
+        },
+        {
+            "label": "UpdateBuild",
+            "dependsOn" :[ "PaketUpdate" ,"Build" ],
+            "dependsOrder": "sequence"
+        }
     ]
 }
