--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -8,6 +8,9 @@
     <PublishReadyToRunComposite>true</PublishReadyToRunComposite>
   </PropertyGroup>
   <ItemGroup>
+    <RuntimeHostConfigurationOption Include="System.GC.HeapCount" Value="2" />
+    <RuntimeHostConfigurationOption Include="System.GC.NoAffinitize" Value="true" />
+
     <ProjectReference Include="..\LSP\LSP.fsproj" />
     <ProjectReference Include="..\..\paket-files\git\localfilesystem\cwtools\CWTools\CWTools.fsproj" />
     <ProjectReference Include="..\LSP\LSP.fsproj" />
