--- a/src/Main/Main.Linux.fsproj
+++ b/src/Main/Main.Linux.fsproj
@@ -10,9 +10,8 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\LSP\LSP.fsproj" />
-    <ProjectReference Include="..\..\paket-files\git\localfilesystem\cwtools\CWTools\CWTools.fsproj" />
-    <ProjectReference Include="..\LSP\LSP.fsproj" />
-    <ProjectReference Include="..\..\paket-files\git\localfilesystem\cwtools\CWTools\CWTools.fsproj" />
+    <ProjectReference Condition="'$(LocalPaket)'=='True'" Include="..\..\paket-files\git\localfilesystem\cwtools\CWTools\CWTools.fsproj" />
+    <ProjectReference Condition="'$(LocalPaket)'!='True'" Include="..\..\paket-files\git\www.github.com\cwtools\cwtools\CWTools\CWTools.fsproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ProjectManager.fs" />
