--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 8.0.x
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 16
     - name: Set chmod
       run: chmod +x ./build.sh
     - name: Test
