--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     ],
     "main": "./out/client/extension/extension.js",
     "files": [
-        "./src/Main/bin/Debug/netcoreapp2.0/Main.dll",
-        "./out",
-        "./embedded"
+        "./out"
     ],
     "contributes": {
         "views": {
@@ -677,6 +675,7 @@
         "@types/node": "^16.18.34",
         "@types/qtip2": "^2.2.30",
         "@types/vscode": "^1.83.0",
+        "@vscode/vsce": "^2.22.0",
         "copyfiles": "^2.3.0",
         "cytoscape": "^3.15.2",
         "cytoscape-canvas": "3.0.1",
