--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,7 +49,7 @@
 			"name": "Quick Build and Launch Extension",
 			"type": "extensionHost",
 			"runtimeExecutable": "${execPath}",
-			"args": ["D:\\Games\\Steam\\steamapps\\common\\Stellaris",  "--extensionDevelopmentPath=${workspaceRoot}" ],
+			"args": ["D:\\Games\\Steam\\steamapps\\common\\Stellaris",  "--extensionDevelopmentPath=${workspaceRoot}/release" ],
 			"stopOnEntry": false,
 			"request": "launch",
             "sourceMaps": false
@@ -61,7 +61,7 @@
             "runtimeExecutable": "${execPath}",
             "args": [
                 "D:\\Games\\Steam\\steamapps\\common\\Stellaris",
-                "--extensionDevelopmentPath=${workspaceRoot}"
+                "--extensionDevelopmentPath=${workspaceRoot}/release"
             ],
             "request": "launch",
             "sourceMaps": false
@@ -73,7 +73,7 @@
             "runtimeExecutable": "${execPath}",
             "args": [
                 "D:\\Games\\Steam\\steamapps\\common\\Stellaris",
-                "--extensionDevelopmentPath=${workspaceRoot}"
+                "--extensionDevelopmentPath=${workspaceRoot}/release"
             ],
             "request": "launch",
             "sourceMaps": false
@@ -82,25 +82,11 @@
             "name": "Launch Only",
 			"type": "extensionHost",
 			"runtimeExecutable": "${execPath}",
-			"args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
+			"args": ["--extensionDevelopmentPath=${workspaceRoot}/release" ],
 			"stopOnEntry": false,
 			"request": "launch",
             "sourceMaps": false,
 
-        },
-        {
-            "preLaunchTask": "Full Build",
-            "name": "Build and Launch Extension",
-            "type": "extensionHost",
-            "runtimeExecutable": "${execPath}",
-            "args": [
-                "C:\\PRogramming\\Stellaris\\stellaris",
-                "--extensionDevelopmentPath=${workspaceRoot}"
-            ],
-            "stopOnEntry": false,
-            "request": "launch",
-            "sourceMaps": false
         }
-
     ]
 }
