--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+      with:
+        ref: ${{ github.head_ref }}
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v3
       with:
@@ -26,6 +28,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 18
+        cache: 'npm'
     - run: npm install
     - name: Set chmod
       run: chmod +x ./build.sh
