--- a/package.json
+++ b/package.json
@@ -3,35 +3,35 @@
         "node": ">=16.0.0"
     },
     "dependencies": {
+        "@vscode/test-electron": "^2.5.2",
         "executable": "4.1.1",
         "vscode-languageclient": "^6.1.3"
     },
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^25.0.5",
-        "@rollup/plugin-node-resolve": "^15.2.2",
+        "@rollup/plugin-commonjs": "^28.0.6",
+        "@rollup/plugin-node-resolve": "^16.0.1",
         "@types/cytoscape": "3.14.7",
         "@types/glob": "^7.1.3",
         "@types/handlebars": "^4.0.40",
-        "@types/mocha": "^5.2.7",
+        "@types/mocha": "^10.0.10",
         "@types/node": "^16.18.34",
         "@types/qtip2": "^2.2.30",
         "@types/vscode": "^1.83.0",
-        "@vscode/vsce": "^2.22.0",
-        "copyfiles": "^2.3.0",
+        "@vscode/vsce": "^3.6.0",
+        "copyfiles": "^2.4.1",
         "cytoscape": "^3.15.2",
         "cytoscape-canvas": "3.0.1",
         "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
         "cytoscape-popper": "1.0.7",
         "glob": "^7.1.6",
         "merge-images": "1.2.0",
-        "mocha": "^6.2.3",
+        "mocha": "^11.7.1",
         "npm": "^6.14.8",
         "popper.js": "^1.15.0",
         "rollup-plugin-hypothetical": "^2.1.0",
         "rollup-plugin-typescript2": "^0.36.0",
         "tippy.js": "^4.3.5",
-        "tslib": "^1.13.0",
-        "typescript": "^5.2.2",
-        "vscode-test": "^1.4.0"
+        "tslib": "^2.8.1",
+        "typescript": "^5.2.2"
     }
 }
