--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "devDependencies": {
         "@rollup/plugin-commonjs": "^28.0.6",
         "@rollup/plugin-node-resolve": "^16.0.1",
-        "@types/cytoscape": "3.14.7",
-        "@types/glob": "^7.1.3",
+        "@types/cytoscape": "^3.21.9",
         "@types/handlebars": "^4.0.40",
         "@types/mocha": "^10.0.10",
         "@types/node": "^16.18.34",
@@ -23,10 +22,9 @@
         "cytoscape-canvas": "3.0.1",
         "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
         "cytoscape-popper": "1.0.7",
-        "glob": "^7.1.6",
+        "glob": "^11.0.3",
         "merge-images": "1.2.0",
         "mocha": "^11.7.1",
-        "npm": "^6.14.8",
         "popper.js": "^1.15.0",
         "rollup-plugin-hypothetical": "^2.1.0",
         "rollup-plugin-typescript2": "^0.36.0",
