--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
         "node": ">=16.0.0"
     },
     "dependencies": {
-        "@vscode/test-electron": "^2.5.2",
         "executable": "4.1.1",
         "vscode-languageclient": "^6.1.3"
     },
@@ -16,6 +15,7 @@
         "@types/node": "^16.18.34",
         "@types/qtip2": "^2.2.30",
         "@types/vscode": "^1.83.0",
+        "@vscode/test-cli": "^0.0.11",
         "@vscode/vsce": "^3.6.0",
         "copyfiles": "^2.4.1",
         "cytoscape": "^3.15.2",
