--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
-    "engines": {
-        "node": ">=16.0.0"
-    },
-    "dependencies": {
-        "executable": "4.1.1",
-        "vscode-languageclient": "^6.1.3"
-    },
-    "devDependencies": {
-        "@rollup/plugin-commonjs": "^28.0.6",
-        "@rollup/plugin-node-resolve": "^16.0.1",
-        "@types/cytoscape": "^3.21.9",
-        "@types/handlebars": "^4.0.40",
-        "@types/mocha": "^10.0.10",
-        "@types/node": "^16.18.34",
-        "@types/qtip2": "^2.2.30",
-        "@types/vscode": "^1.83.0",
-        "@vscode/test-cli": "^0.0.11",
-        "@vscode/vsce": "^3.6.0",
-        "copyfiles": "^2.4.1",
-        "cytoscape": "^3.15.2",
-        "cytoscape-canvas": "3.0.1",
-        "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
-        "cytoscape-popper": "1.0.7",
-        "glob": "^11.0.3",
-        "merge-images": "1.2.0",
-        "mocha": "^11.7.1",
-        "popper.js": "^1.15.0",
-        "rollup-plugin-hypothetical": "^2.1.0",
-        "rollup-plugin-typescript2": "^0.36.0",
-        "tippy.js": "^4.3.5",
-        "tslib": "^2.8.1",
-        "typescript": "^5.2.2"
-    }
+  "engines": {
+    "vscode": "^1.83.0"
+  },
+  "scripts": {
+    "compile": "tsc -p .",
+    "test": "npm run compile && vscode-test -c ./.vscode-test.js",
+    "test:watch": "tsc -w -p . & vscode-test -c ./.vscode-test.js -w"
+  },
+  "dependencies": {
+    "executable": "4.1.1",
+    "vscode-languageclient": "^6.1.3"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@types/cytoscape": "^3.21.9",
+    "@types/handlebars": "^4.0.40",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^16.18.34",
+    "@types/qtip2": "^2.2.30",
+    "@types/vscode": "^1.83.0",
+    "@vscode/test-cli": "^0.0.11",
+    "@vscode/test-electron": "^2.3.8",
+    "@vscode/vsce": "^3.6.0",
+    "copyfiles": "^2.4.1",
+    "cytoscape": "^3.15.2",
+    "cytoscape-canvas": "3.0.1",
+    "cytoscape-elk": "github:jfstephe/cytoscape.js-elk",
+    "cytoscape-popper": "1.0.7",
+    "glob": "^11.0.3",
+    "merge-images": "1.2.0",
+    "mocha": "^11.7.1",
+    "popper.js": "^1.15.0",
+    "rollup-plugin-hypothetical": "^2.1.0",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "tippy.js": "^4.3.5",
+    "tslib": "^2.8.1",
+    "typescript": "^5.2.2"
+  }
 }
