--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,7 +23,7 @@
             },
             "label": "BuildLocal",
             "args": [
-                "QuickBuildLocal"
+                "QuickBuildLocalDebug"
             ],
             "group": {
                 "kind": "build",
